Improved tombstone ignore behaviour
AbstractBufferedEventSource is improved so if tryFillBuffer() returns an
empty buffer and there's still time remaining on the timeout it keeps
calling it until the buffer gets some events or the timeout expires.

Clarifying tests and JavaDoc around offset commit behaviour when
tombstones are ignored and manual commits are in use.  In this scenario
trailing tombstones are not reflected in the committed offset meaning
they would have to be reprocessed upon restart.